testsuite/tests/dependent/should_fail/T14066c.stderr
T14066c.hs:8:17: error: [GHC-83865]
    • Expected kind ‘Bool’, but ‘Nothing’ has kind ‘Maybe a0’
    • In the second argument of ‘H’, namely ‘Nothing’
      In the type ‘H True Nothing’
      In the type synonym declaration for ‘X’

